[package]
name = "rustymq"
version = "0.0.1"
authors = ["David Tamas Nyari <dnyari@dnyari.info>"]

[features]
default = []
network-openssl-socket-support = ["openssl"]

[dependencies]
rand = "0.7.*"
openssl = { version = "0.10", optional = true }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3