[package]
name = "rustymq"
version = "0.0.1"
authors = ["David Tamas Nyari <dev@dnyari.info>"]

[features]
default = []
network-openssl-socket-support = ["openssl"]
systemv-support = ["libc"]

[dependencies]
rand = "0.7.*"
openssl = { version = "0.10", optional = true }

[target.'cfg(target_family = "unix")'.dependencies]
libc = {version = "0.2", optional = true}

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3