[package]
name = "rusty_mq_request_reply_tcp_connection_example"
version = "0.0.1"
authors = ["David Tamas Nyari <dev@dnyari.info>"]

[dependencies]
clap = { version = "2.33.*" }
rustymq = { path = "../..", version="0.0.1"}
rand = "0.7.*"
lazy_static = "1.4.*"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3